# CHAIN

./: .gitignore  README.md  pyproject.toml
assets/stacking_game/: __init__.py  game_3d.py  game_3d_file.py  game_cli.py  game_core.py  initialization.py  loader.py  placement.py  rotation.py  visualizer_3d.py  visualizer_pieces.py
docs/: DEVELOPER_GUIDE (Legacy).md  aabb_size_information.md  container_stability_improvements.md  improvements_summary.md  index.html  physics_improvements.md  prompt_analysis.md  puzzle_translater_task.md  soft_contact_physics.md  stable_move_solution.md  ultra_soft_collision_and_freeze.md
docs/css/: style.css
docs/data/: leaderboard.json  levels.json
docs/js/: main.js
docs/step-examples/level_0_2x2x2_easy_001/: level_0_metrics.json  level_0_results_Detailed.xlsx  level_0_results_Difficulty.xlsx
docs/step-examples/level_15_2x3x3_mid_001/: level_15_metrics.json  level_15_results_Detailed.xlsx  level_15_results_Difficulty.xlsx
docs/step-examples/level_16_2x3x3_mid_002/: level_16_metrics.json  level_16_results_Detailed.xlsx  level_16_results_Difficulty.xlsx
docs/step-examples/level_61_3x4x4_hard_005/: level_61_metrics.json  level_61_results_Detailed.xlsx  level_61_results_Difficulty.xlsx
eval_configs/: luban.yaml  stacking_game_222.yaml  stacking_game_222_pairwise_judge.yaml  stacking_game_222_reward_model.yaml  stacking_game_222_seed.yaml  stacking_game_223.yaml  stacking_game_223_seed.yaml  stacking_game_234.yaml  stacking_game_234_seed.yaml  stacking_game_244.yaml  stacking_game_244_seed.yaml  stacking_game_333.yaml  stacking_game_333_seed.yaml  stacking_game_334.yaml  stacking_game_334_seed.yaml  stacking_game_344.yaml  stacking_game_344_seed.yaml  stacking_game_444.yaml  stacking_game_444_seed.yaml
example_logs/domino_quick_test_20250912_110749/: experiment_log.json  experiment_results_Detailed.xlsx  experiment_results_Difficulty.xlsx  summary.txt
example_logs/domino_quick_test_20250912_110749/detailed_reports/: gpt-4o_evaluation_report.json  gpt-4o_trajectories.json
example_logs/luban_disassembly_test_20251127_041055/: experiment_log.json  experiment_results_Detailed.xlsx  experiment_results_Difficulty.xlsx  summary.txt
example_logs/luban_disassembly_test_20251127_041055/detailed_reports/: gpt-5-mini_evaluation_report.json  gpt-5-mini_trajectories.json
examples/: luban_example.py  stacking_game_test.py
notebooks/: README.md  collision_softening_guide.md  demo_notebook_usage.py  luban_load_demo.ipynb  object_info_for_model.md  puzzle_interactive.ipynb  puzzle_interactive_test.py  reward_test.ipynb  task.md  test.ipynb  test_notebook.py  test_trajectory.json  verify_model_path.py
scripts/: eval.sh  start_luban.py
src/chainbench/: __init__.py  cli.py  luban_runner.py  runner.py  stacking_runner.py
src/chainbench/agents/: __init__.py  base_agent.py  human_agent.py  openai_agent.py  reward_agent.py  (+1 more)
(+119 files in other folders)
